<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    android:weightSum="1">

    <!--タイトル-->
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_title" />

    <!--本文-->
    <EditText
        android:id="@+id/editBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/hint_body"
        android:inputType="textMultiLine" />


    <!--btn-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--セーブ-->
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save_btn"
            android:textColor="@color/colorFont" />

        <!--リセット-->
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/reset_btn"
            android:textColor="@color/colorFont" />

        <!--クリア-->
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/clear_btn"
            android:textColor="@color/colorFont" />
    </LinearLayout>

</LinearLayout>